worksheet.css
/* Number One */
.container-1 {
    display: flex;
    align-items: flex-start;
}

/* Number Two */
.container-2 {
    display: flex;
    align-items: flex-end;
}

/* Number Three */
.container-3 {
    display: flex;
    align-items: center;
}

/* Number Four */
.container-4 {
    display: flex;
    align-items: center;
    justify-content: right;
    
}

/* Number Five */
.container-5 {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Number Six */
.container-6 {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

/* Number Seven */
.container-7 {
    display: flex;
    align-items: center;
    justify-content: space-around;
}

/* Number Eight */
.container-8 {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

/* Number Nine */
.container-9 {
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
}

/* Number Ten */
.container-10 {
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-wrap: wrap;
}

/* Number Eleven */
.container-11 {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

/* Number Twelve */
.container-12 {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
    
}

.nerf-12 {
    background-color: blue;
    align-self: flex-end;
    order: 1;
}

/* Number Thirteen */
.container-13 {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.nerf-13 {
    background-color: blue;
    align-self: center;
    order: -1;
}

/* Number Fourteen */
.container-14 {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.nerf-14 {
    background-color: blue;
    align-self: baseline;
    order: -1;
}

